--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
+   
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #7ea56a;">
         <div class="container-fluid">
             <img src="/static/img/logo.png" alt="Logo" style="width: 6em;">
@@ -19,38 +20,29 @@
         </div>
       </nav>
       
-    <h1 class="text-center mt-5 mb-5">hola</h1>
+    <h1 class="text-center mt-5 mb-5">Sistama de matricula de alumnos</h1>
+    <ul class="nav justify-content-center mb-5">
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('alta')}}">
+                <img src="static/img/Matricula.jpeg" style="width: 1em; margin-right: 5px;">
+                Nuevo alumno
+            </a> 
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <img src="static/img/Ingresos.jpeg" style="width: 1em; margin-right: 5px;">
+                Ingresos
+            </a> 
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <img src="static/img/Egresos.jpeg" style="width: 1em; margin-right: 5px;">
+                Egresos
+            </a> 
+        </li>
+      </ul>
     <div class="row">
-        <div class="col-md-2 mt-5 ">
-            <div class="nav-container pt-5">
-                <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a class="nav-link" href="#">
-                    <img src="static/img/Matricula.jpeg" style="width: 1em; margin-right: 5px;">
-                    Nuevo alumno
-                </a> 
-                </li>
-                <li class="nav-item mb-3">
-                  <a class="nav-link" href="#">
-                    <img src="static/img/Alumnos.jpeg" style="width: 1em; margin-right: 5px;">
-                    Listado de alumnos
-                </a> 
-                </li>
-                <li class="nav-item mb-3">
-                  <a class="nav-link" href="#">
-                    <img src="static/img/Ingresos.jpeg" style="width: 1em; margin-right: 5px;">
-                    Ingresos
-                </a> 
-                </li>
-                <li class="nav-item mb-3">
-                  <a class="nav-link" href="#">
-                    <img src="static/img/Egresos.jpeg" style="width: 1em; margin-right: 5px;">
-                    Egresos
-                </a> 
-                </li>
-                </ul>
-            </div>
-        </div>
+        
         <div class="col-md-10 container">
         <div class="card"> 
             <p class="text-left"> Alta de alumno</p>
