--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div class="menu-item">
-            <a href="https://www.google.com">
+            <a href="{{url_for('egresos')}}">
             <h3>Egresos</h3>
             <img src="static/img/Egresos.jpeg" alt="Egresos">
             </a>
