--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -52,30 +52,30 @@
                 <form action="{{ url_for('ingresos')}}" method="POST">
                     <div class="row mb-3">
                         <div class="col-md-3">
-                            <label >Nombre</label>
+                            <label >Nombre <span class="campo-obligatorio">*</span></label>
                             <input type="text" class="form-control mb-3" name="nombre_alumno"required>
                         </div>
                         <div class="col-md-3">
-                            <label >Apellido</label>
+                            <label >Apellido <span class="campo-obligatorio">*</span></label>
                             <input type="text" class="form-control mb-3" name="apellido_alumno"required>
                         </div>
                         <div class="col-md-3">
-                            <label >Fecha de pago</label>
+                            <label >Fecha de pago <span class="campo-obligatorio">*</span></label>
                             <input type="date" class="form-control mb-3" name="fecha_pago"required>
                         </div>
                         <div class="col-md-3">
-                            <label >Monto</label>
-                            <input type="text" class="form-control mb-3" name="monto"required>
+                            <label >Monto <span class="campo-obligatorio">*</span></label>
+                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" required>
                         </div>
                         <div class="col-md-3">
-                            <label >Medios de pago</label>
+                            <label >Medios de pago <span class="campo-obligatorio">*</span></label>
                             <input type="text" class="form-control mb-3" name="medios_de_pago"required>
                         </div>
                         <div class="col-md-3">
                             <button class="btn btn-primary mb-3 mt-4" type="submit">Guardar</button>
                         </div>
                     </div>
-                    <a href="/" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
+                    <a href="/inicio" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
                 </form>
 
               
@@ -118,15 +118,15 @@
                                     <div class="modal-body">
                                         <form action="{{ url_for('editaringresos', id_ingresos=d.id_ingresos) }}" method="POST">
                                             <input type="hidden" name="id" value="{{ d.id }}">
-                                            <label>Nombre</label>
+                                            <label>Nombre <span class="campo-obligatorio">*</span></label>
                                             <input type="text" class="form-control mb-3" name="nombre_alumno" value="{{ d.nombre_alumno }}"required>
-                                            <label>Apellido</label>
+                                            <label>Apellido <span class="campo-obligatorio">*</span></label>
                                             <input type="text" class="form-control mb-3" name="apellido_alumno" value="{{ d.apellido_alumno }}"required>
-                                            <label>Fecha de pago</label>
+                                            <label>Fecha de pago <span class="campo-obligatorio">*</span></label>
                                             <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}"required>
-                                            <label>Monto</label>
-                                            <input type="text" class="form-control mb-3" name="monto" value="{{ d.monto }}"required>
-                                            <label>Medio de pago</label>
+                                            <label>Monto <span class="campo-obligatorio">*</span></label>
+                                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" value="{{ d.monto }}" required>
+                                            <label>Medio de pago <span class="campo-obligatorio">*</span></label>
                                             <input type="text" class="form-control mb-3" name="medios_de_pago" value="{{ d.medios_de_pago }}"required>
                                             <div class="modal-footer">
                                                 <button type="submit" class="btn btn-primary">Guardar cambios</button>
