--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -64,6 +64,9 @@ body {
 .img-perfil{
   background-color: #FBD374;
   border-radius: 3em;
+  justify-content: center !important;
+  align-items: center !important;
+  text-align: center !important;
 }
 
 /*Home*/
