--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -11,25 +11,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    
-    <form method="POST" action="/login" class="form-signin">
-        
-        <div class="top-bar">
-            <img class="mb-4 mt-4 p-1" src="{{ url_for('static', filename='img/logo.png') }}" alt="" width="75em" height="60em">
-        </div>
-        <h1 class="txt-login h3 mb-3 fw-normal">Iniciar Sesión</h1>
-        <div class="perfil-container">
-            <img class="mb-4 mt-4 img-perfil text-center" src="{{ url_for('static', filename='img/perfil.png') }}" alt="" width="70em" height="70em">
-        </div>  
-        <div class="form-floating col-md-8 mx-auto">
-            <input type="text"  class="form-control custom-input" id="username" name="username" required><br><br>
-            <label for="username">Usuario:</label>
-        </div>
-        <div class="form-floating  mt-2  col-md-8 mx-auto">
-            <input type="password" class="form-control custom-input" id="password" name="password" required><br><br>
-            <label for="password">Contraseña:</label>
-        </div>
-        <button class="btn-login btn btn-lg text-center mb-4 mt-4" type="submit">Ingresar</button>
-    </form>
+ 
+        <form method="POST" action="/login" class="form-signin ">
+            <div class="contenedor-login">
+                <div class="top-bar">
+                    <img class="mb-4 mt-4 p-1" src="{{ url_for('static', filename='img/logo.png') }}" alt="" width="75em" height="60em">
+                </div>
+                <h1 class="txt-login h3 mt-4 mb-3 fw-normal text-center">Iniciar Sesión</h1>
+                <div class="perfil-container">
+                    <img class="mb-4  img-perfil text-center" src="{{ url_for('static', filename='img/perfil.png') }}" alt="" width="70em" height="70em">
+                </div>  
+                <div class="form-floating col-md-8 mx-auto">
+                    <input type="text" class="input-login" id="username" name="username" placeholder="Usuario" required><br><br>                 
+                </div>
+                <div class="form-floating col-md-8 mx-auto">                 
+                    <input type="password " class="input-login" id="password" name="password" placeholder="Contraseña" required><br>                   
+                </div> <br><br>
+                <div class="justify-content-center d-flex">
+                    <button class="btn-login px-3 py-2 text-center" type="submit">Ingresar</button>
+                </div>
+            </div>
+        </form>
+
 </body>
 </html>
